# telepact

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CONTRIBUTING.md  GO_CODEGEN_PLAN.md  GO_PLAN.md  LICENSE_HEADER.txt  LICENSE_HEADER_DRAFT.txt  Makefile  NOTICE  Pipfile  README.md  SPECIFICATION.md  TODO.txt  VERSION.txt  conftest.py  generate_test.py  llms.txt  notes.md  package-lock.json  package.json  test_cases.py  tmp.json  tmp2.json
demo/services/todo-python/: Dockerfile  pyproject.toml
lib/py/: .gitignore  Makefile  Pipfile  README.md  benchmark_roundtrip.py  build_test.py  metrics.txt  playground.py  prepare.py  pyproject.toml  version.py
lib/py/japi/: application_error.py  async_client.py  binary_encoder.py  client.py  client_error.py  client_options.py  client_process_error.py  client_processor.py  default_serializer.py  deserialization_error.py  internal_binary_encoder_builder.py  internal_japi.py  internal_parse.py  internal_process.py  internal_types.py  japi_parse_error.py  processor.py  serialization_error.py  sync_client.py
lib/py/msgpact/: DefaultSerialization.py  MockMsgPactSchema.py  MockServer.py  MsgPactError.py  MsgPactSchema.py  MsgPactSchemaFiles.py  MsgPactSchemaParseError.py  Serialization.py  Server.py  __init__.py
lib/py/scripts/: generate_tests.py
lib/py/telepact/: Client.py  ClientBinaryStrategy.py  DefaultClientBinaryStrategy.py  DefaultSerialization.py  FunctionRouter.py  Message.py  MockServer.py  MockTelepactSchema.py  RandomGenerator.py  Response.py  Serialization.py  SerializationError.py  Serializer.py  SerializerMeasurement.py  Server.py  TelepactError.py  TelepactSchema.py  TelepactSchemaFiles.py  TelepactSchemaParseError.py  TestClient.py  TypedMessage.py  __init__.py
lib/py/telepact.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lib/py/test/: playground.py
lib/py/tests/: __main__.py  test_client_binary_retry.py  test_importlib_resources.py  test_process_bytes_parse_failure.py  test_select.py  test_server.py
lib/py/uapi/: Client.py  ClientBinaryStrategy.py  DefaultClientBinaryStrategy.py  DefaultSerialization.py  DefaultSerializer.py  Message.py  MockServer.py  MockUApiSchema.py  RandomGenerator.py  Serialization.py  SerializationError.py  Serializer.py  Server.py  UApiError.py  UApiSchema.py  UApiSchemaFiles.py  UApiSchemaParseError.py  __init__.py  _default_client_binary_strategy.py  _default_serializer.py  _random_generator.py  _util.py  _util_types.py  auth.uapi.json  internal.uapi.json  mock-internal.uapi.json  types.py
qa/lib/java/: .gitignore  Makefile  README.md  build_test.py  codegen.sh  dependency.py  pom.xml  pyproject.toml  setup.sh
qa/lib/py/: .gitignore  Makefile  Pipfile  README.md  build_test.py  codegen.sh  dependency.py  metrics.txt  pyproject.toml  setup.sh
qa/lib/ts/: .gitignore  Makefile  Pipfile  build_test.py  codegen.sh  dependency.py  index.js  index.ts  package-lock.json  package.json  pyproject.toml  setup.sh  tsconfig.json
sdk/cli/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
sdk/cli/msgpact_cli/: cli.py
sdk/cli/telepact_cli/: calculator.telepact.json  calculator.telepact.yaml  cli.py
sdk/cli/telepact_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sdk/cli/tests/: __init__.py  test_data.py  test_main.py  test_resources.py
test/lib/py/: .gitignore  Makefile  pyproject.toml  setup.sh
test/runner/: .gitignore  AGENTS.md  Makefile  README.md  __init__.py  auth_cases.py  binary_cases.py  cases.py  conftest.py  garbage_cases.py  mock_cases.py  mockgen_cases.py  parse_cases.py  pyproject.toml  stdio_bus.py  test_api_examples.py  test_auth.py  test_binary.py  test_binary_client_server.py  test_client_cases.py  test_client_server.py  test_client_server_codegen.py  test_cold_binary_client_server.py  test_garbage.py  test_load_binary.py  test_load_json.py  test_load_pbinary.py  test_mock.py  test_mockgen.py  test_optional_wire_key_json.py  test_schema.py  test_server.py  test_test_client_server.py  util.py
test/runner/parameters/: __init__.py  api_examples_cases.py  auth_cases.py  binary_cases.py  cases.py  garbage_cases.py  mock_cases.py  mockgen_cases.py  parse_cases.py  schema_loader.py  test_client_cases.py
test/runner/parse/: duplicate_keys.japi.json  invalid_trait_fn_key.japi.json
tool/bump_patch_version/: README.md  pyproject.toml
tool/bump_patch_version/bump_patch_version/: cli.py
tool/bump_patch_version/test-java/: pom.xml
tool/calculator-service/: Makefile  README.md  dependency.py  pyproject.toml
tool/calculator-service/calculator_service/: __main__.py  app.py
tool/docker-mock-msgpact/: .dockerignore  Dockerfile  app.py  build.sh  docker-compose.yml  pyproject.toml
tool/docker-mock-uapi/: Dockerfile  Pipfile  app.py  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
tool/msgpact_codegen/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
tool/msgpact_codegen/msgpact_codegen/: gen.py
tool/msgpact_codegen/tests/: test_main.py
tool/msgpact_codegen/think/: MsgPactList.java
tool/msgpact_version/: README.md  pyproject.toml
tool/msgpact_version/msgpact_version/: cli.py
tool/telepact_project_cli/: Makefile  README.md  pyproject.toml
tool/telepact_project_cli/telepact_project_cli/: cli.py  constants.py  git_helpers.py  github_utils.py  project_files.py  release_plan.py
tool/telepact_project_cli/test-java/: pom.xml
tool/telepact_project_cli/tests/: test_auto_merge_workflow.py  test_cli.py  test_license_header.py  test_project_files.py  test_release_plan.py  test_repository_automation.py
tool/uapi_version/: README.md  pyproject.toml
tool/uapi_version/test-java/: pom.xml
tool/uapi_version/uapi_version/: cli.py
tool/uapicodegen/: .gitignore  Makefile  Pipfile  README.md  conftest.py  dependency.py  package-lock.json  package.json  pyproject.toml
tool/uapicodegen/example/: Example1.java  NullableOptional.java  example1.uapi.json
tool/uapicodegen/src/: index.ts  javatemplate.hbs
tool/uapicodegen/tests/: test_main.py
(+3541 files in other folders)
