[project]
name = "telepact"
version = "1.0.0-alpha.0"
description = "Telepact"
requires-python = ">=3.11"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
license = "Apache-2.0"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [ "telepact/json/*", "telepact/LICENSE", "telepact/NOTICE",]
[[tool.poetry.packages]]
include = "telepact"

[tool.poetry.dependencies]
msgpack = "^1.1.0"

[tool.poetry.group.dev.dependencies]
nats-py = "*"
prometheus-client = "*"
mypy = "*"
build = "*"
toml = "*"
