[build-system]
requires = [ "setuptools>=77", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "telepact"
version = "1.0.0-alpha.228"
description = "The Python Telepact library"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Operating System :: OS Independent",]
dependencies = [ "msgpack>=1.1.1,<2", "PyYAML>=6.0.2,<7",]
license-files = [ "LICENSE", "NOTICE",]
[[project.authors]]
name = "Telepact Authors"
email = "telepact@googlegroups.com"

[dependency-groups]
dev = [ "nats-py>=2.11,<3", "prometheus-client>=0.22,<0.25", "mypy>=1.17,<2", "build>=1.3,<2", "toml>=0.10.2,<0.11",]

[tool.setuptools.package-data]
telepact = [ "json/*.json", "json/*.yaml",]

[tool.setuptools.packages.find]
include = [ "telepact*",]
