[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "telepact_cli"
version = "1.0.0-alpha.63"
description = "A CLI tool for various local Telepact operations."
authors = [ "Telepact Authors <telepact@googlegroups.com>",]
readme = "README.md"
license = "Apache-2.0"
keywords = [ "cli", "telepact",]
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Topic :: Utilities",]
include = [ "telepact_cli/telepact/**/*",]
[[tool.poetry.packages]]
include = "telepact_cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.1"
jinja2 = "^3.1"
msgpack = "^1.1.0"
uvicorn = "^0.34.3"
requests = "^2.32"
starlette = "^0.47.0"

[tool.poetry.scripts]
telepact = "telepact_cli.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
requests = "^2.32"
