[build-system]
requires = [ "setuptools>=77", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "telepact-cli"
version = "1.0.0-alpha.238"
description = "A CLI tool for various local Telepact operations."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = [ "cli", "telepact",]
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Operating System :: OS Independent", "Topic :: Utilities",]
dependencies = [ "click>=8.2.1,<9", "jinja2>=3.1,<4", "msgpack>=1.1.1,<2", "uvicorn>=0.35,<0.43", "requests>=2.32,<3", "starlette>=0.47.3,<1.1.0", "websockets>=12,<17", "PyYAML>=6.0.2,<7",]
license-files = [ "LICENSE", "NOTICE",]
[[project.authors]]
name = "Telepact Authors"
email = "telepact@googlegroups.com"

[dependency-groups]
dev = [ "pytest>=8.4,<10.0",]

[project.scripts]
telepact = "telepact_cli.cli:main"

[tool.setuptools.package-data]
telepact_cli = [ "templates/*.j2", "*.telepact.yaml",]
"telepact_cli.telepact" = [ "json/*.json", "json/*.yaml",]

[tool.setuptools.packages.find]
include = [ "telepact_cli*",]
