[tool.poetry]
name = "telepact-qa-test"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
msgpack = "^1.1"
nats-py = "^2.11"
pytest = "^8.4"
prometheus-client = "^0.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"