[project]
name = "calculator-service"
version = "0.1.0"
description = ""
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_explicit = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
toml = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.910"

[tool.poetry.dependencies.msgpact]
path = "../../lib/py"

[tool.poetry.scripts]
msgpact_example = "calculator_service.__main__:run_main"

[tool.poetry]
include = ["calculator_service"]
[[tool.poetry.packages]]
include = "calculator_service"
