[project]
name = "uapi-mock"
version = "0.1.0"
description = ""
requires-python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.0"
fastapi = "*"
uvicorn = "*"
mypy = "*"
requests = "*"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies.uapi]
path = "../../lib/py"

[tool.poetry.group.dev.dependencies]
pytest = "*"
toml = "*"
