[project]
name = "msgpact_codegen"
version = "0.0.56"
description = "MsgPact Code Generator"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = ["msgpact_codegen/msgpact/**/*"]
[[tool.poetry.packages]]
include = "msgpact_codegen"

[tool.poetry.dependencies]
python = "^3.11"
toml = "*"
click = "*"
jinja2 = "*"
msgpack = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pyinstaller = "*"

[tool.poetry.scripts]
msgpact-codegen = "msgpact_codegen.gen:generate"
