[tool.poetry]
name = "telepact_project_cli"
version = "1.0.0"
description = "A CLI tool for developing the Telepact project."
authors = [ "Telepact Authors <telepact@googlegroups.com>",]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.3.1"
toml = "^0.10.2"
lxml = "^6.0.2"
pyyaml = "^6.0.3"
"ruamel.yaml" = "0.18.17"
pygithub = "^2.8"

[tool.poetry.scripts]
telepact-project = "telepact_project_cli.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"