[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telepact-project-cli"
version = "1.0.0"
description = "A CLI tool for developing the Telepact project."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Telepact Authors", email = "telepact@googlegroups.com" },
]
dependencies = [
    "click>=8.3.1,<9",
    "toml>=0.10.2,<0.11",
    "lxml>=6.1.0,<7",
    "pyyaml>=6.0.3,<7",
    "ruamel.yaml==0.19.1",
    "pygithub>=2.8,<3",
]

[project.scripts]
telepact-project = "telepact_project_cli.cli:main"

[tool.setuptools.packages.find]
include = ["telepact_project_cli*"]
namespaces = true
