[project]
name = "uapicodegen"
version = "0.0.44"
description = "Universal API Code Generator"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
[[tool.poetry.packages]]
include = "uapicodegen"

[tool.poetry.scripts]
uapicodegen = "uapicodegen.gen:generate"

[tool.poetry.dependencies]
python = "^3.11"
toml = "*"
click = "*"
jinja2 = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.dependencies.uapi]
path = "../../lib/py"
