[project]
name = "uapi-java-test"
version = "0.1.0"
description = ""
requires-python = ">=3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
toml = "*"

[tool.poetry.dependencies.uapicodegen]
path = "../../../tool/uapicodegen"
