[project]
name = "telepacttest"
version = "0.1.0"
requires-python = ">=3.11,<4"
dependencies = [
    "build>=1.2,<2",
    "msgpack>=1.0,<2",
    "nats-py>=2.8,<3",
    "prometheus-client>=0.20,<0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.1,<9",
    "toml>=0.10.2,<0.11",
]

[tool.uv]
package = false
